--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://sylvaindenyse.me</title><link rel="canonical" href="https://sylvaindenyse.me"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://sylvaindenyse.me" /></head></html>
+<!DOCTYPE html><html><head><title>sylvaindenyse.me</title><link rel="canonical" href="sylvaindenyse.me"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=sylvaindenyse.me" /></head></html>
