Publishing to gh-pages (publish.sh)

--- a/fr/more/index.html
+++ b/fr/more/index.html
@@ -131,7 +131,7 @@ L&rsquo;enjeu du projet est sa refonte complète, mais sans interruption dans le
 <h2 id="compétences">Compétences</h2>
 
 <ul>
-<li>Languages : Javascript, Python, PHP, &hellip;</li>
+<li>Langages : Javascript, Python, PHP, &hellip;</li>
 <li>CI : Jenkins, Gitlab CI, &hellip;</li>
 <li>Système : NGINX, Docker, Makefile, Kubernetes, Linux, &hellip;</li>
 <li>Méthodologie : SCRUM</li>
@@ -147,6 +147,21 @@ Formation en partenariat avec le CNAM, réalisée en contrat de professionalisat
 
 <p><strong>IUT de Nantes - DUT Informatique</strong> : 2014 - 2016<br />
 Parcours des bases de l&rsquo;informatique (conception, pilotage de projet, web, base de données, &hellip;).</p>
+
+<h2 id="associatif">Associatif</h2>
+
+<p><strong>Régisseur - Association Art&rsquo;Culmine</strong> : 2015 - 2019<br />
+Conception de scène et mise en lumière.<br />
+Conception technique son, vidéo et lumière.</p>
+
+<p><strong>Vice-Président - BDE Astro&rsquo;Nantes</strong> : 2015 - 2016<br />
+Organisation d&rsquo;événements pour une association étudiante.</p>
+
+<p><strong>Acteur et cavalier - Cinéscénie du Puy du Fou</strong> : 2007 - 2019
+Participation à un grand spectacle vivant racontant l&rsquo;histoire de la région.</p>
+
+<p><strong>Vidéo Jockey - Association Asia Project</strong> : 2013
+Conception et mix vidéo en direct pour illustrer les mixs de DJ.</p>
 
   </article>
 </section>
