--- a/more/index.html
+++ b/more/index.html
@@ -11,10 +11,12 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="More information"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="I am 23 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;
+After two years of work experience in Business Intelligence within the Fleury Michon group, I decided to take charge of my professional project and direct it towards web development, my first passion. I am currently finishing my fifth year of study at Pepperbay, a web development agency."/>
 
     <meta property="og:title" content="More information" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="I am 23 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;
+After two years of work experience in Business Intelligence within the Fleury Michon group, I decided to take charge of my professional project and direct it towards web development, my first passion. I am currently finishing my fifth year of study at Pepperbay, a web development agency." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sylvaindenyse.me/more/" />
 <meta property="og:site_name" content="Sylvain DENYSE - Web Developer Designer" />
@@ -105,6 +107,60 @@
     </header>
 
     
+
+<p><div class="avatar left">
+    <img src="/images/avatar.jpg" alt="avatar">
+</div>
+I am 23 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;</p>
+
+<p>After two years of work experience in Business Intelligence within the <a href="https://www.fleurymichon.fr/">Fleury Michon</a> group, I decided to take charge of my professional project and direct it towards web development, my first passion.
+I am currently finishing my fifth year of study at <a href="https://www.pepperbay.fr/">Pepperbay</a>, a web development agency.</p>
+
+<h2 id="professional-experience">Professional experience</h2>
+
+<p>Development of an international trading software, a monolithic application in Symfony 3.4 / Twig.
+The challenge of the project is its complete redesign, but without interruption in the development of new features :</p>
+
+<ul>
+<li>Back : API Platform (Symfony 4)</li>
+<li>Front : ReactJS</li>
+</ul>
+
+<h2 id="skills-and-competencies">Skills and competencies</h2>
+
+<ul>
+<li>Languages : Javascript, Python, PHP, &hellip;</li>
+<li>CI : Jenkins, Gitlab CI, &hellip;</li>
+<li>System : NGINX, Docker, Makefile, Kubernetes, Linux, &hellip;</li>
+<li>Methodology : SCRUM</li>
+</ul>
+
+<h2 id="school-course">School course</h2>
+
+<p><strong>EPSI - Master of Science in Computer Engineering</strong> : 2017 - 2019<br />
+Training leading to a level I RNCP qualification (Bac+5) &ldquo;Expert in Computer Science and Information Systems&rdquo;, and carried out in an apprenticeship in the <a href="https://www.fleurymichon.fr/">Fleury Michon</a> company and <a href="https://www.pepperbay.fr/">Pepperbay</a>.</p>
+
+<p><strong>IIA Laval - Bachelor of Science in Computer Science</strong> : 2016 - 2017<br />
+Training in partnership with the CNAM, carried out under a professionalization contract with <a href="https://www.fleurymichon.fr/">Fleury Michon</a>.</p>
+
+<p><strong>IUT of Nantes - Computer Science Associate’s Degree</strong> : 2014 - 2016<br />
+Journey through computer science basics (design, project management, web, database,&hellip;).</p>
+
+<h2 id="associative">Associative</h2>
+
+<p><strong>Stage Manager - Art&rsquo;Culmine Association</strong> : 2015 - 2019<br />
+Stage design and lighting.<br />
+Technical design of sound, video and light.</p>
+
+<p><strong>Vice-President - BDE Astro&rsquo;Nantes</strong> : 2015 - 2016<br />
+Organization of events for a student association.</p>
+
+<p><strong>Actor and horse rider - Cinéscénie at Puy du Fou</strong> : 2007 - 2019
+Participation in a major live show telling the history of the region.</p>
+
+<p><strong>Vidéo Jockey - Asia Project Association</strong> : 2013
+Live video design and mix to illustrate DJ mixes.</p>
+
   </article>
 </section>
 
