Publishing to gh-pages (publish.sh)

--- a/fr/more/index.html
+++ b/fr/more/index.html
@@ -157,10 +157,10 @@ Conception technique son, vidéo et lumière.</p>
 <p><strong>Vice-Président - BDE Astro&rsquo;Nantes</strong> : 2015 - 2016<br />
 Organisation d&rsquo;événements pour une association étudiante.</p>
 
-<p><strong>Acteur et cavalier - Cinéscénie du Puy du Fou</strong> : 2007 - 2019
+<p><strong>Acteur et cavalier - Cinéscénie du Puy du Fou</strong> : 2007 - 2019<br />
 Participation à un grand spectacle vivant racontant l&rsquo;histoire de la région.</p>
 
-<p><strong>Vidéo Jockey - Association Asia Project</strong> : 2013
+<p><strong>Vidéo Jockey - Association Asia Project</strong> : 2013<br />
 Conception et mix vidéo en direct pour illustrer les mixs de DJ.</p>
 
   </article>
