--- a/more/index.html
+++ b/more/index.html
@@ -155,10 +155,10 @@ Technical design of sound, video and light.</p>
 <p><strong>Vice-President - BDE Astro&rsquo;Nantes</strong> : 2015 - 2016<br />
 Organization of events for a student association.</p>
 
-<p><strong>Actor and horse rider - Cinéscénie at Puy du Fou</strong> : 2007 - 2019
+<p><strong>Actor and horse rider - Cinéscénie at Puy du Fou</strong> : 2007 - 2019<br />
 Participation in a major live show telling the history of the region.</p>
 
-<p><strong>Vidéo Jockey - Asia Project Association</strong> : 2013
+<p><strong>Vidéo Jockey - Asia Project Association</strong> : 2013<br />
 Live video design and mix to illustrate DJ mixes.</p>
 
   </article>
