Publishing to gh-pages (publish.sh)

--- a/fr/more/index.html
+++ b/fr/more/index.html
@@ -111,7 +111,7 @@ Expériences professionnelles Développement d&rsquo;un logiciel de négoce inte
     
 
 <p><div class="avatar left">
-    <img src="/images/avatar.jpg" alt="avatar">
+    <img src="/img/avatar.jpg" alt="avatar">
 </div>
 J&rsquo;ai 23 ans et je suis passionné d&rsquo;informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;</p>
 
