--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section class="container centered">
   <div class="about">
     
-      <div class="avatar"><img src="/images/avatar.jpg" alt="avatar"></div>
+      <div class="avatar"><img src="/img/avatar.jpg" alt="avatar"></div>
     
     <h1>Sylvain DENYSE</h1>
     <h2>Full Stack, DevOps and Magician</h2>
