--- a/more/index.html
+++ b/more/index.html
@@ -109,7 +109,7 @@ After two years of work experience in Business Intelligence within the Fleury Mi
     
 
 <p><div class="avatar left">
-    <img src="/images/avatar.jpg" alt="avatar">
+    <img src="/img/avatar.jpg" alt="avatar">
 </div>
 I am 23 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;</p>
 
