Publishing to gh-pages (publish.sh)

--- a/fr/more/index.html
+++ b/fr/more/index.html
@@ -11,14 +11,12 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="En savoir plus"/>
-<meta name="twitter:description" content="Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion. Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise.
-Expériences professionnelles Pepperbay - Développeur web : 2019 - &hellip;
-En charge de la refonte de l&#39;interface d&#39;une application de négoce international."/>
+<meta name="twitter:description" content="J&#39;ai 24 ans et je suis passionné d&#39;informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;
+Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion. Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise."/>
 
     <meta property="og:title" content="En savoir plus" />
-<meta property="og:description" content="Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion. Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise.
-Expériences professionnelles Pepperbay - Développeur web : 2019 - &hellip;
-En charge de la refonte de l&#39;interface d&#39;une application de négoce international." />
+<meta property="og:description" content="J&#39;ai 24 ans et je suis passionné d&#39;informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;
+Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion. Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sylvaindenyse.me/fr/more/" />
 <meta property="og:site_name" content="Sylvain DENYSE | Concepteur Developpeur Web" />
@@ -108,7 +106,12 @@ En charge de la refonte de l&#39;interface d&#39;une application de négoce inte
       <h1>En savoir plus</h1>
     </header>
 
-    <!-- raw HTML omitted -->
+    <figure class="avatar left">
+    <img src="/img/avatar.jpg"
+         alt="avatar"/> 
+</figure>
+
+<p>J'ai 24 ans et je suis passionné d'informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;</p>
 <p>Après 2 années d'alternances dans la Business Intelligence au sein du groupe <a href="https://www.fleurymichon.fr/">Fleury Michon</a>, j'ai décidé de prendre en main mon projet professionnel et de l'orienter vers le développement web, ma première passion.
 Je travaille actuellement chez <a href="https://www.pepperbay.fr/">Pepperbay</a>, agence de développement web, après avoir accompli une année en alternance dans cette entreprise.</p>
 <h2 id="expriences-professionnelles">Expériences professionnelles</h2>
