--- a/more/index.html
+++ b/more/index.html
@@ -11,14 +11,12 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="More information"/>
-<meta name="twitter:description" content="After two years of work experience in Business Intelligence within the Fleury Michon group, I decided to take charge of my professional project and direct it towards web development, my first passion. I am actually working in Pepperbay, a web development agency, after a work-study program accomplished in this company.
-Professional experience Pepperbay - Web Developer: 2019 - &hellip;
-In charge of redesigning the interface of an international trading application."/>
+<meta name="twitter:description" content="I am 24 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;
+After two years of work experience in Business Intelligence within the Fleury Michon group, I decided to take charge of my professional project and direct it towards web development, my first passion. I am actually working in Pepperbay, a web development agency, after a work-study program accomplished in this company."/>
 
     <meta property="og:title" content="More information" />
-<meta property="og:description" content="After two years of work experience in Business Intelligence within the Fleury Michon group, I decided to take charge of my professional project and direct it towards web development, my first passion. I am actually working in Pepperbay, a web development agency, after a work-study program accomplished in this company.
-Professional experience Pepperbay - Web Developer: 2019 - &hellip;
-In charge of redesigning the interface of an international trading application." />
+<meta property="og:description" content="I am 24 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;
+After two years of work experience in Business Intelligence within the Fleury Michon group, I decided to take charge of my professional project and direct it towards web development, my first passion. I am actually working in Pepperbay, a web development agency, after a work-study program accomplished in this company." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sylvaindenyse.me/more/" />
 <meta property="og:site_name" content="Sylvain DENYSE - Web Developer Designer" />
@@ -108,7 +106,12 @@ In charge of redesigning the interface of an international trading application."
       <h1>More information</h1>
     </header>
 
-    <!-- raw HTML omitted -->
+    <figure class="avatar left">
+    <img src="/img/avatar.jpg"
+         alt="avatar"/> 
+</figure>
+
+<p>I am 24 years old and I am passionate about computing in the broad sense: dev, web technos, hardware, Linux, IoT,&hellip;</p>
 <p>After two years of work experience in Business Intelligence within the <a href="https://www.fleurymichon.fr/">Fleury Michon</a> group, I decided to take charge of my professional project and direct it towards web development, my first passion.
 I am actually working in <a href="https://www.pepperbay.fr/">Pepperbay</a>, a web development agency, after a work-study program accomplished in this company.</p>
 <h2 id="professional-experience">Professional experience</h2>
