--- a/fr/more/index.html
+++ b/fr/more/index.html
@@ -12,11 +12,13 @@
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="En savoir plus"/>
 <meta name="twitter:description" content="J&#39;ai 24 ans et je suis passionné d&#39;informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;
-Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion. Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise."/>
+Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion.
+Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise."/>
 
     <meta property="og:title" content="En savoir plus" />
 <meta property="og:description" content="J&#39;ai 24 ans et je suis passionné d&#39;informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;
-Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion. Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise." />
+Après 2 années d&#39;alternances dans la Business Intelligence au sein du groupe Fleury Michon, j&#39;ai décidé de prendre en main mon projet professionnel et de l&#39;orienter vers le développement web, ma première passion.
+Je travaille actuellement chez Pepperbay, agence de développement web, après avoir accompli une année en alternance dans cette entreprise." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sylvaindenyse.me/fr/more/" />
 <meta property="og:site_name" content="Sylvain DENYSE | Concepteur Developpeur Web" />
@@ -112,7 +114,7 @@ Après 2 années d&#39;alternances dans la Business Intelligence au sein du grou
 </figure>
 
 <p>J'ai 24 ans et je suis passionné d'informatique au sens large : dev, technos web, hardware, Linux, IoT, &hellip;</p>
-<p>Après 2 années d'alternances dans la Business Intelligence au sein du groupe <a href="https://www.fleurymichon.fr/">Fleury Michon</a>, j'ai décidé de prendre en main mon projet professionnel et de l'orienter vers le développement web, ma première passion.
+<p>Après 2 années d'alternances dans la Business Intelligence au sein du groupe <a href="https://www.fleurymichon.fr/">Fleury Michon</a>, j'ai décidé de prendre en main mon projet professionnel et de l'orienter vers le développement web, ma première passion.<br>
 Je travaille actuellement chez <a href="https://www.pepperbay.fr/">Pepperbay</a>, agence de développement web, après avoir accompli une année en alternance dans cette entreprise.</p>
 <h2 id="expriences-professionnelles">Expériences professionnelles</h2>
 <p><strong>Pepperbay - Développeur web</strong> : 2019 - &hellip;</p>
