Publishing to gh-pages (publish.sh)

--- a/fr/more/index.html
+++ b/fr/more/index.html
@@ -151,12 +151,12 @@ Formation en partenariat avec le CNAM, réalisée en contrat de professionalisat
 <p><strong><a href="https://iutnantes.univ-nantes.fr/formations/dut-bac-2-/dut-informatique-2019469.kjsp">IUT de Nantes</a> - DUT Informatique</strong> : 2014 - 2016<br>
 Parcours des bases de l'informatique (conception, pilotage de projet, web, base de données, &hellip;).</p>
 <h2 id="associatif">Associatif</h2>
-<p><strong>Régisseur - Association Art'Culmine</strong> : 2015 - 2019<br>
+<p><strong>Régisseur - Association Art'Culmine</strong> : 2015 - &hellip;<br>
 Conception de scène et mise en lumière.<br>
 Conception technique son, vidéo et lumière.</p>
 <p><strong>Vice-Président - BDE Astro'Nantes</strong> : 2015 - 2016<br>
 Organisation d'événements pour une association étudiante.</p>
-<p><strong>Acteur et cavalier - Cinéscénie du Puy du Fou</strong> : 2007 - 2019<br>
+<p><strong>Acteur et cavalier - Cinéscénie du Puy du Fou</strong> : 2007 - &hellip;<br>
 Participation à un grand spectacle vivant racontant l'histoire de la région.</p>
 <p><strong>Vidéo Jockey - Association Asia Project</strong> : 2013<br>
 Conception et mix vidéo en direct pour illustrer les mixs de DJ.</p>
