--- a/more/index.html
+++ b/more/index.html
@@ -151,14 +151,14 @@ Training in partnership with the CNAM, carried out under a professionalization c
 <p><strong><a href="https://iutnantes.univ-nantes.fr/formations/dut-bac-2-/dut-informatique-2019469.kjsp">IUT de Nantes</a> - Computer Science Associate’s Degree</strong>: 2014 - 2016<br>
 Journey through computer science basics (design, project management, web, database,&hellip;).</p>
 <h2 id="associative">Associative</h2>
-<p><strong>Stage Manager - Art'Culmine Association</strong>: 2015 - 2019<br>
+<p><strong>Stage Manager - Art'Culmine Association</strong>: 2015 - &hellip;<br>
 Stage design and lighting.<br>
 Technical design of sound, video and light.</p>
 <p><strong>Vice-President - BDE Astro'Nantes</strong>: 2015 - 2016<br>
 Organization of events for a student association.</p>
-<p><strong>Actor and horse rider - Cinéscénie at Puy du Fou</strong>: 2007 - 2019<br>
+<p><strong>Actor and horse rider - Cinéscénie at Puy du Fou</strong>: 2007 - &hellip;<br>
 Participation in a major live show telling the history of the region.</p>
-<p><strong>Vidéo Jockey - Asia Project Association</strong>: 2013<br>
+<p><strong>Video Jockey - Asia Project Association</strong>: 2013<br>
 Live video design and mix to illustrate DJ mixes.</p>
 
   </article>
