feat: create home page layout

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap" rel="stylesheet"> 
+  </head>
   <body>
     <main></main>
     <script src="../src/index.js"></script>
